--- a/VRChat/61/1342861.html
+++ b/VRChat/61/1342861.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      ドロワーズ｜#VRoid - #YUINOESTORE - BOOTH
+      ドロワーズ｜#VRoid - YUINOE STORE - BOOTH
     </title>
     <meta name="description" content=
     "乙女の嗜みであるドロワーズです。 様々な装いに合わせられるよう3色ご用意しました。 VRoid Studioのズボンで使用する想定で製作しています。 1色のドロワーズにはドロワーズ本体と同じ色の腹部リボンが付属します。 ドロワーズのみをインポートしてシンプルなドロワーズにすることもできますし、ドロワーズとリボンをインポートしてリボン付きのドロワーズにすることもできます。 特典版には全てのドロワーズ（腹部リボン含）とピンク、ブルー、レッドの3色の腹部リボンが付属します。 お好みの生地とお好みのリボンを組み合わせればかわいらしく特別なドロワーズを演出できます。 ミニ丈のドロワーズはこちらです。">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "ドロワーズ｜#VRoid - #YUINOESTORE - BOOTH">
+    "ドロワーズ｜#VRoid - YUINOE STORE - BOOTH">
     <meta name="twitter:description" content=
     "乙女の嗜みであるドロワーズです。 様々な装いに合わせられるよう3色ご用意しました。 VRoid Studioのズボンで使用する想定で製作しています。 1色のドロワーズにはドロワーズ本体と同じ色の腹部リボンが付属します。 ドロワーズのみをインポートしてシンプルなドロワーズにすることもできますし、ドロワーズとリボンをインポートしてリボン付きのドロワーズにすることもできます。 特典版には全てのドロワーズ（腹部リボン含）とピンク、ブルー、レッドの3色の腹部リボンが付属します。 お好みの生地とお好みのリボンを組み合わせればかわいらしく特別なドロワーズを演出できます。 ミニ丈のドロワーズはこちらです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1342861/eecc2976-1769-4715-b345-f085b2d6e730_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "ドロワーズ｜#VRoid - #YUINOESTORE - BOOTH">
+    "ドロワーズ｜#VRoid - YUINOE STORE - BOOTH">
     <meta property="og:description" content=
     "乙女の嗜みであるドロワーズです。 様々な装いに合わせられるよう3色ご用意しました。 VRoid Studioのズボンで使用する想定で製作しています。 1色のドロワーズにはドロワーズ本体と同じ色の腹部リボンが付属します。 ドロワーズのみをインポートしてシンプルなドロワーズにすることもできますし、ドロワーズとリボンをインポートしてリボン付きのドロワーズにすることもできます。 特典版には全てのドロワーズ（腹部リボン含）とピンク、ブルー、レッドの3色の腹部リボンが付属します。 お好みの生地とお好みのリボンを組み合わせればかわいらしく特別なドロワーズを演出できます。 ミニ丈のドロワーズはこちらです。">
     <meta property="og:image" content=
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "P3ALy1xHYe+L9c+CkOByI1WYTANw/Fc9iSSGkehm4lA="></script>
+    "1Y+09YA0UhiTiSvrl7IZmAscaBKHQfyBYuG6cDP1h+g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ドロワーズ｜#VRoid","description":"乙女の嗜みであるドロワーズです。\n様々な装いに合わせられるよう3色ご用意しました。\n\nVRoid Studioのズボンで使用する想定で製作しています。\n\n1色のドロワーズにはドロワーズ本体と同じ色の腹部リボンが付属します。\nドロワーズのみをインポートしてシンプルなドロワーズにすることもできますし、ドロワーズとリボンをインポートしてリボン付きのドロワーズにすることもできます。\n\n特典版には全てのドロワーズ（腹部リボン含）とピンク、ブルー、レッドの3色の腹部リボンが付属します。\nお好みの生地とお好みのリボンを組み合わせればかわいらしく特別なドロワーズを演出できます。\n\nミニ丈のドロワーズはこちらです。\nミニドロワーズ\nhttps://yui-noe.booth.pm/items/1592557\n\nお着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。\nTwitter: https://twitter.com/yui_noe","url":"https://booth.pm/ja/items/1342861","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1342861/eecc2976-1769-4715-b345-f085b2d6e730_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="P3ALy1xHYe+L9c+CkOByI1WYTANw/Fc9iSSGkehm4lA="></script>
+    nonce="1Y+09YA0UhiTiSvrl7IZmAscaBKHQfyBYuG6cDP1h+g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -145,9 +145,10 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://yui-noe.booth.pm/"><img alt=
-                            "#YUINOESTORE" class=
+                            "YUINOE STORE" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5080392/icon_image/6bfb8f2d-3823-4fb5-9ba7-c328510bb076_base_resized.jpg">#YUINOESTORE</a>
+                            "https://booth.pximg.net/c/48x48/users/5080392/icon_image/6bfb8f2d-3823-4fb5-9ba7-c328510bb076_base_resized.jpg">YUINOE
+                            STORE</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               ドロワーズ｜#VRoid
@@ -1000,7 +1001,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
